targetloadpacking/targetloadpacking.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trimaran-scheduler
  namespace: trimaran
  labels:
    app: trimaran-scheduler
    app.kubernetes.io/name: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trimaran-scheduler
  template:
    metadata:
      labels:
        app: trimaran-scheduler
    spec:
      serviceAccount: trimaran-scheduler
      volumes:
        - name: etckubernetes
          configMap:
            name: trimaran-scheduler-config
      containers:
        - name: kube-scheduler
          image: quay.io/chenw615/kube-scheduler:latest
          imagePullPolicy: Always
          args:
          - /bin/kube-scheduler
          - --config=/etc/kubernetes/config.yaml
          - -v=6
          volumeMounts:
          - name: etckubernetes
            mountPath: /etc/kubernetes
