targetloadpacking/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: targetloadpacking-test
  namespace: trimaran-test
spec:
  schedulerName: trimaran-scheduler
  containers:
  - name: cpu-stress-container
    image: progrium/stress
    args:
    - "-c"
    - "1" # Number of workers to spawn for stressing CPU
    resources:
      requests:
        cpu: "500m" # Request 0.5 CPU core
      limits:
        cpu: "1" # Limit to 1 CPU cores
