targetloadpacking/worker1-background.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker1-background
  namespace: trimaran-test
spec:
  nodeName: 10.242.64.4
  containers:
  - name: cpu-stress-container
    image: progrium/stress
    args:
    - "-c"
    - "3" # Number of workers to spawn for stressing CPU
    resources:
      requests:
        cpu: "200m" # Request CPU 200 milicores
      limits:
        cpu: "3" # Limit to 3 CPU cores
