targetloadpacking/worker3-background.yaml
apiVersion: v1
kind: Pod
metadata:
  name: worker3-background
  namespace: trimaran-test
spec:
  nodeName: 10.242.64.6
  containers:
  - name: no-stress
    image: progrium/stress
    command: ["/bin/sh"]
    args:
    - "-c"
    - |
      sleep infinity
    resources:
      requests:
        cpu: "1"
      limits:
        cpu: "3"
